ch2/src/pass/snapshots/ch2__pass__uniquify__tests__let_form_in_init.snap
---
source: ch2/src/pass/uniquify.rs
expression: result.to_string_pretty()

---
(let
 [x.1 (let [y.0 3] y.0)]
 (+ 2 x.1))
